--- a/doqmeat/photobook/index.css
+++ b/doqmeat/photobook/index.css
@@ -46,7 +46,7 @@ main {
 	flex-wrap: wrap;
 	overflow: visible;
 	text-align: center;
-	max-width: 1100px;
+	max-width: 1300px;
 	line-height: 0px;
 }
 
@@ -64,8 +64,9 @@ a:hover {
 	display: block;
 	margin: 20px 10px;
 	max-height: 420px;
-	overflow: auto;
 	transition-duration: 0.3s;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 .pic:hover {
@@ -74,17 +75,24 @@ a:hover {
 }
 
 .digi {
-	border-radius: 20px;
-	border: 6px double black;
+	background: white;
+	border: 7px solid transparent;
+	padding: 4px;
+	border-image: url("/!g/border/greenlaceborde.png") 8 round;
+	-webkit-border-image: url("/!g/border/greenlaceborde.png") 8 round;
+	-o-border-image: url("/!g/border/greenlaceborde.png") 8 round;
+	-moz-border-image: url("/!g/border/greenlaceborde.png") 8 round;
 }
 
 .film {
+	border-radius: 5px;
 	border: 10px solid white;
-	border-bottom-width: 2.5rem;
+	border-bottom-width: 4rem;
 }
 
 .pic > img {
 	width: 100%;
+	border-radius: 5px;
 }
 
 .caption {
