june scrapbook + minor tweaks to CSS

--- a/doqmeat/scrapbook/body.css
+++ b/doqmeat/scrapbook/body.css
@@ -172,6 +172,7 @@ header.page {
 	background: url('/notebook/!g/grid-blue.png');
 	border-radius: 10px;
 	overflow: auto;
+	text-shadow: 1px 1px 2px white;
 }
 
 li summary::after {
