fav albums minor changes to CSS

--- a/doqmeat/music/fav-albums.css
+++ b/doqmeat/music/fav-albums.css
@@ -183,7 +183,7 @@ h2 {
 	position: relative;
 	box-sizing: border-box;
 	background-color: black;
-	background-image: url(/music/!g/bg/trppbg.jpg);
+	background-image: url(/music/!g/bg/trppbg.png);
 	background-position: center;
 	background-size: 800px;
 	margin: auto;
