--- a/doqmeat/!f/homepage-v3/flower.css
+++ b/doqmeat/!f/homepage-v3/flower.css
@@ -594,14 +594,12 @@ button:hover {
 	rotate: -20deg
 }
 
-/*
 #sticker25 {
 	content: url('/!g/deco/koinuko-kittytiny.gif');
-	top: 36%;
-	left: 25%;
-	rotate: -14deg
+	top: 3%;
+	left: 67%;
+	rotate: 15deg;
 }
-*/
 
 #sticker26 {
 	content: url('/!g/deco/bunnyzzz.gif');
@@ -622,9 +620,31 @@ button:hover {
 }
 
 #mizu {
-	content: url('/!g/homepage/mizu.png');
+	pointer-events: auto;
+	cursor: help;
+	content: url('/!g/homepage/mizu2.png');
 	top: 31%;
 	left: 22.5%;
+	filter: drop-shadow(1px 0px 0px #7cbae6) drop-shadow(0px 1px 0px #7cbae6) drop-shadow(-1px 0px 0px #7cbae6) drop-shadow(0px -1px 0px #7cbae6);
+}
+
+#mizu-pop-up {
+	font-size: 10px;
+	line-height: 13px;
+	position: absolute;
+	top: 46%;
+	left: 38%;
+	text-align: center;
+	width: 190px;
+	padding: 10px;
+	background: white;
+	border-radius: 20px;
+	border: 4px solid var(--l-yellow);
+	display: none;
+}
+
+#mizu-pop-up p {
+	margin: 0px;
 }
 
 #fixed-1 {
