--- a/doqmeat/microblog/index.css
+++ b/doqmeat/microblog/index.css
@@ -19,6 +19,7 @@
 			background-size: cover;
 			font-family: ms pgothic, arial;
 			margin: 0;
+			padding: 0;
 			text-align: center;
 			color: black;
 			font-size: 14px;
@@ -196,7 +197,7 @@
 			left: 30px;
 			background: #6f5994;
 			color: white;
-			width: 190px;
+			max-width: 190px;
 			padding: 10px;
 			border-radius: 10px;
 		}
@@ -246,6 +247,10 @@
 
 		@media only screen and (max-width: 1160px) {
 
+			.hide {
+				display: none;
+			}
+
 			#puter {
 				display: none;
 			}
@@ -253,8 +258,27 @@
 
 		@media only screen and (max-width: 600px) {
 			#mouse {
-				bottom: 1px;
-				left: 1px;
+				display: none;
+			}
+
+			#picture-win {
+				left: 1%;
+				bottom: 1%;
+				position: fixed;
+				height: 300px;
+				overflow: auto;
+				width: 290px;
+				cursor: move;
+			}
+
+			#info {
+				max-width: 600px;
+				margin: 20px 10px;
+				top: 0px;
+				left: 0px;
+				bottom: 0px;
+				position: relative;
+				display: block;
 			}
 
 			#address {
@@ -262,7 +286,7 @@
 			}
 
 			main {
-				margin: 2px;
+				margin: 10px 10px;
 				grid-template-rows: 25px 27px 100%;
 			}
 		}
