--- a/doqmeat/journal/status-cafe.css
+++ b/doqmeat/journal/status-cafe.css
@@ -4,28 +4,14 @@ body {
 	word-wrap: break-word;
 	font-size: 14px;
 	line-height: 21px;
-	font-family: ms gothic;
+	font-family: gaegu-l, ms gothic, arial;
 	color: black;
 	scrollbar-color: #E4A79D #fffcdc;
 }
 
-i {
-	background: #C7D9F8;
-}
-
-mark {
-	background: #FFE481;
-}
-
-li {
-	list-style-image: url('/!g/pix/li19.gif');
-	padding-left: 2px;
-	list-style-position: inside;
-}
-
 a {
 	color: black;
-	background: #D0FF8D;
+	background: #FFE481;
 	font-weight: bold;
 	text-decoration: none;
 }
@@ -38,11 +24,6 @@ a:hover {
 
 a:focus {
 	text-decoration: wavy underline;
-}
-
-a:active,
-a:hover {
-	outline: 0
 }
 
 p {
@@ -93,21 +74,7 @@ p img {
 	padding-right: 3px;
 }
 
-#s-m-t-tooltip {
-	max-width: 200px;
-	font-family: morningtea;
-	text-align: center;
-	font-size: 14px;
-	z-index: 9999;
-	margin: 30px 15px 7px 12px;
-	padding: 5px;
-	border-radius: 10px;
-	border: 2px dashed #C9525E;
-	color: black;
-	background: #FFFCDC;
-}
-
 @font-face {
-	font-family: 'morningtea';
-	src: url(/fonts/MorningTea.ttf);
+	font-family: 'gaegu-l';
+	src: url(https://doqmeat.com/fonts/Gaegu-Light.ttf)
 }
