updated notebook layout archive

--- a/doqmeat/notebook/archive/layouts/index.html
+++ b/doqmeat/notebook/archive/layouts/index.html
@@ -73,9 +73,10 @@
 		<img title="v1" src="230415-music-v1.jpg">
 
 		<h2>journal</h2>
-		<img title="march 2024" src="240303-journal.jpg">
-		<img title="june? 2024" src="231214-journal.jpg">
-		<img title="april 2023" src="230420-logs.jpg">
+		<img src="240706-journal.jpg" title="july 2024 - v3">
+		<img title="march 2024 - v2.3" src="240303-journal.jpg">
+		<img title="may 2024 - v2.2" src="231214-journal.jpg">
+		<img title="april 2023 - v1" src="230420-logs.jpg">
 
 		<h2>blog</h2>
 		<img title="nov 2023" src="231127-blog.jpg">
@@ -84,8 +85,6 @@
 		<h2>resources, archives, etc</h2>
 		<img title="nov 2023" src="231126-notebook.jpg">
 		<img title="may 2023" src="230501-other-v1.jpg">
-
-
 
 
 	</div>
